chore: rearrange endponts
