# src/main/java/com/finalproject/easyjob/controller/DomainController.java
@@ -10,7 +10,6 @@ import java.util.List;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestParam;
@@ -35,10 +34,5 @@ public class DomainController {
   public List<RestDomain> createOrUpdateDomains(@RequestBody List<RestSaveDomain> restSaveDomains) {
     return service.saveDomains(restSaveDomains.stream().map(mapper::toDomain).toList()).stream()
         .map(mapper::toRest).toList();
-  }
-
-  @GetMapping("/domains/{id}")
-  public RestDomain getDomainById(@PathVariable int id) {
-    return mapper.toRest(service.getById(id));
   }
 }
